--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^4.26.0",
+    "@dynamic-labs/sdk-react-core": "^4.26.0",
+    "@dynamic-labs/wagmi-connector": "^4.26.0",
+    "@tanstack/react-query": "^5.85.3",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "viem": "^2.33.3",
     "wagmi": "^2.16.3"
   },
   "devDependencies": {
